assets/styles/gospeldesk.scss
---
---
@import "assets/styles/roomy";

/* Fonts
 * =====
 * h/t:
 *  https://github.com/philatype/Sen
 *  https://fonts.google.com/specimen/Sen
 *  https://google-webfonts-helper.herokuapp.com/
 */

@font-face {
  font-family: 'Sen';
  font-style: normal;
  font-weight: 400;
  src: url('/assets/fonts/sen-v1-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Sen Regular'), local('Sen-Regular'),
       url('/assets/fonts/sen-v1-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('/assets/fonts/sen-v1-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('/assets/fonts/sen-v1-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('/assets/fonts/sen-v1-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('/assets/fonts/sen-v1-latin-regular.svg#Sen') format('svg'); /* Legacy iOS */
}
@font-face {
  font-family: 'Sen';
  font-style: normal;
  font-weight: 800;
  src: url('/assets/fonts/sen-v1-latin-800.eot'); /* IE9 Compat Modes */
  src: local('Sen ExtraBold'), local('Sen-ExtraBold'),
       url('/assets/fonts/sen-v1-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('/assets/fonts/sen-v1-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
       url('/assets/fonts/sen-v1-latin-800.woff') format('woff'), /* Modern Browsers */
       url('/assets/fonts/sen-v1-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
       url('/assets/fonts/sen-v1-latin-800.svg#Sen') format('svg'); /* Legacy iOS */
}

$Sen: Sen, sans-serif;


/* Colors
 * ======
 */

$white: #DADBD2;
$black: #21201A;
$red: #B2342D;

$gray: #848174;
$brown: #5B4738;
$pink: #CA867C;

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background: $gray;
  text-align: center;
  font: normal 11pt/16pt $Sen;
  min-width: 320px;
}

/* no italic in Sen */
em, cite {
  font-style: normal;
  text-decoration: underline;
}

@mixin highlight($color, $opacity) {
  background: $color;
  background: linear-gradient(
                rgba($color, 0) 0%,
                rgba($color, 0) 32%,
                rgba($color, $opacity) 32%,
                rgba($color, $opacity) 80%,
                rgba($color, 0) 80%,
                rgba($color, 0) 100%,
              );
}
u, u.yellow {
  text-decoration: none; // override default
  @include highlight(#ff6, 0.25);
}
u.blue { @include highlight(#0ff, 0.18); }
u.red { @include highlight(#f00, 0.08); }
u.heavy, u.yellow.heavy { @include highlight(#ff6, 0.8); }
u.heavy.blue { @include highlight(#0ff, 0.6); }
u.heavy.red { @include highlight(#f00, 0.2); }


ul {
  margin: 0;
  li {
    list-style: none;
    display: inline;
    &::after { content: " ❧ "; }
    &:last-of-type::after { content: ""; }
    color: $gray;
    a {
      color: $gray;
    }
  }
  &.breadcrumbs {
    margin: 0 0 24pt;
    li {
      font: normal 10pt/10pt $Sen;
      &::after { content: " ⤇ "; }
      &:last-of-type::after { content: ""; }
    }
  }
}

.top {
  background: $white;
  img {
    width: 50%;
    max-width: 320px;
  }
  padding: 15vh 0;
}

.hero {
  padding: 15vw 0;
  text-align: center;
  background-image: url('/assets/images/hero.jpg');
  background-color: $black;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: $white;
  h2 {
    font: bold 24pt/24pt $Sen;
  }
  p {
    padding: 18pt 0 0;
    width: 70%;
    margin: 0 auto;
    font: normal 12pt/18pt $Sen;
  }
}

.pieces {
  background: $gray;
}

.content {
  display: block;
  color: $black;
  text-decoration: none;
  background: $white;
  box-shadow: $black 0px 1pt 3pt;

  text-align: left;
  width: 90%;
  max-width: 480pt;
  padding: 12pt 18pt;
  margin: 18pt auto;

  &.single {
    margin: -35vw auto 24pt;
    padding: 18pt 18pt 24pt;
  }

  header {
    text-decoration: none;
    border-left: 3pt solid $red;
    padding-left: 15pt;
    margin: 0 0 12pt -18pt;
    display: block;
    position: relative;

    h4 {
      margin: 0;
      border: 0;
      padding: 0 0 3pt 0;
    }
  }

  h3 {
    font: bold 18pt/21pt $Sen;
    margin-bottom: 3pt;
  }
  h4 {
    font: normal 12pt/15pt $Sen;
    border-left: 3pt solid $pink;
    margin: 24pt 0 9pt -18pt;
    padding: 2pt 0 2pt 15pt;
    clear: both;
    color: $gray;
  }
  h5 {
    font: bold 12pt/15pt $Sen;
    margin: 18pt 0 3pt;
  }

  h4 + p,
  h5 + p,
  hr + p {
      text-indent: 0;
  }
  p {
    text-indent: 18pt;
    &:first-of-type {
      text-indent: 0;
    }
  }

  blockquote {
    margin: 12pt 0 12pt 18pt;
    &.praise {
      margin: 0;
      clear: both;
      text-indent: -5pt;
      padding: 0 0 12pt;
      cite {
        text-decoration: none;
        display: block;
        font: normal 9pt/12pt $Sen;
        padding: 3pt 0 3pt 9pt;
        text-indent: -9pt;
        &::before {
          content: "—";
        }
      }
      &:last-of-type {
        padding-bottom: 0;
        cite {
          padding-bottom: 0;
        }
      }
    }
  }
  blockquote + p {
    text-indent: 0;
  }

  img {
    width: 100%;
    margin: 12pt 0;
    display: block;
  }
  .caption {
    font: normal 10pt/14pt $Sen;
    color: $gray;
    a {
      color: inherit;
    }
  }

  ol {
    margin: 12pt 0 12pt 18pt;
    li {
      margin-bottom: 6pt;
      &:last-of-type {
        margin-bottom: 0;
      }
    }
  }

  hr {
    border: 0;
    margin: 12pt 0 12pt 50%;
    padding-left: -6pt;
    &::before {
      content: "❧";
      color: $gray;
    }
  }

  .youtube {
    /* https://www.w3schools.com/howto/howto_css_aspect_ratio.asp */
    &.aspect-ratio-16-9 { padding-top: 56.25%; }

    width: 100%;
    position: relative;

    .youtube-inner {
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;

      iframe {
        width: 100%;
        height: 100%;
      }
    }
  }

  .update {
    .title {
      display: block;
      padding: 6pt 0 3pt;
    }
    .date {
      color: $gray;
    }
    .excerpt {
      display: block;
      font: normal 10pt/14pt $Sen;
    }

    margin-top: 12pt;
    &:first-of-type {
      margin-top: 0;
    }
  }

  .read-more {
    float: right;
    color: $red;
    margin-top: 6pt;
    padding: 3pt 6pt;
    &:hover {
      background: $pink;
      color: $black;
    }
  }

  &.subscribe {
    position: relative;
    form {
      margin: 12pt 0;
      table {
        width: 100%;
        border-collapse: collapse;
        .input {
          width: 100%;
          padding-right: 3pt;
        }
      }
      label {
        display: none;
      }
      input {
        width: 100%;
        font: 12pt/18pt $Sen;
        padding: 3pt 12pt;
        border: 1px solid $black;
        background: white;
        border-radius: 4px;
      }
      button {
        background: $red;
        color: $white;
        font: 12pt/18pt $Sen;
        padding: 3pt 12pt;
        border: 1px solid $red;
        border-radius: 4px;
        margin: 0;
        cursor: pointer;
      }
    }
    .tinyletter img {
      width: 64pt;
      display: block;
      margin: 0 auto;
    }
  }
}

.card {
  padding: 12pt 0 0;
  header {
    margin: 0 0 12pt 0;
  }
  .description {
    padding: 0 18pt 12pt;
  }
  img {
    margin: 0;
    width: 100%;
  }
}

footer {
  padding: 18pt;
  background: $black;
  color: $white;
  span {
    white-space: nowrap;
  }
  a {
    color: $white;
  }
  li {
    display: block;
    &::after { content: (""); }
  }
}

.clear {
  clear: both;
  height: 0pt;
}


/* Page-specific */
/* ============= */

table.twelve-believers {
  width: 100%;
  border-collapse: collapse;

  td {
    width: 33%;
    vertical-align: top;

    a {
      display: block;
      position: relative;
      padding: 0 10px 0 0;
      text-decoration: none;

      img {
        width: 100%;
        margin: 12pt 0 6pt;

        &.default {
          opacity: 0.15;
        }
      }

      span {
        display: block;
        padding: 0 10px 0 0;

        &.name {
          text-decoration: underline;
        }

        &.description {
          font-size: smaller;
          line-height: 130%;
          color: $black;
        }
      }
    }
  }
}


/* Responsiveness */
/* ============== */

@media only screen and (min-width: 640px) {
  @include roomy_styles
}

